Move to Zulu JRE (#1675)
* Move `apt` commands behind `$CI`

Same as for the windows command, no need to rerun this every time

* Use fallback to avoid unbound variables

* Scripts: Switch to Zulu JRE

* workflows: Switch to zulu JDK

* fix: Launcher requires sun.awt.* exports

* Update renovate for Zulu