@@ -1,3 +1,3 @@
 #!/bin/sh
 
-exec ./jre/bin/java -jar ./Suwayomi-Launcher.jar
+exec ./jre/bin/java --add-exports=java.desktop/sun.awt=ALL-UNNAMED -jar ./Suwayomi-Launcher.jar
